# ai-study

./: .gitignore
.claude/: settings.local.json
std-1/: .editorconfig  .gitignore  README.md
std-1/java-backend/: checkstyle.xml  pom.xml
std-1/python-api/: .env.example  .flake8  .pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt
std-1/python-api/src/: __init__.py  main.py  router.py
std-1/python-api/src/models/: schemas.py
std-1/python-api/src/service/: ai_service.py  excel_service.py  stats_service.py
std-1/python-api/uploads/: cee7ebb6-9558-4dcc-be79-411f0a958608.xlsx
std-1/vue-frontend/: .prettierignore  .prettierrc  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
std-1/vue-frontend/public/: demo.json
std-1/vue-frontend/src/: App.vue  main.ts
std-1/vue-frontend/src/api/: analysis.ts
std-1/vue-frontend/src/components/chat/: ChatContainer.vue  ChatInput.vue  ChatMessage.vue  ChatSidebar.vue
std-1/vue-frontend/src/composables/: useChat.ts
std-1/vue-frontend/src/router/: index.ts
std-1/vue-frontend/src/types/: chat.ts
std-1/vue-frontend/src/views/: AiAnalysis.vue
std-2/: .pre-commit-config.yaml  demo.json  plan.md  requirements.txt  test_app.py  todo.md  带量采购数据_新.xlsx
std-2/.claude/: settings.local.json
std-2/backend/: app.py  config.py  data_loader.py  dl_ai.html
std-2/backend/services/: ai_service.py
std-2/scripts/: codex_hook.py
